--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 </li>
                 <li class="cabecalho__nav_list_item cabecalho__nav_list_item-input">
                     <input type="search" placeholder="O que você procura?" class="cabecalho__nav_list_input">
+                    <img src="./assets/icons/search.svg" alt="lupa" class="pesquisa-icon">
                 </li>
                 <li class="cabecalho__nav_list_item">
                     <a href="#" class="cabecalho__nav_list_link cabecalho__nav_list_link-login">Login</a>
