--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </nav>
     </header>
     <section class="banner">
-        <img src="./assets/banner.png" alt="Uma pessoa usando uma camisa da use dev">
+        <img class="banner__imagem" src="./assets/banner.png" alt="Uma pessoa usando uma camisa da use dev">
         <div class="banner__container">
             <h2 class="banner__container-titulo">Hora de abraaçar <span>o seu lado geek</span></h2>
             <button class="banner__container-botao">ver as novidade!</button>
