--- a/index.html
+++ b/index.html
@@ -61,6 +61,37 @@
             <button class="banner__container-botao">ver as novidade!</button>
         </div>
     </section>
+
+    <section class="categorias">
+        <h3 class="categorias__titulo">Categorias</h3>
+        <p class="categorias__texto">De roupas a gadgets tecnologicos temos tudo para atender suas paixões e hobbies com estilo e autenticidade</p>
+        <ul class="categorias__list">
+            <li class="categorias_list_item categorias__list_item-roupas">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/roupas.png" alt="Roupas"/>
+                </div>
+                <h4 class="categorias__list_item_titulo">Roupas</h4>
+            </li>
+            <li class="categorias_list_item categorias__list_item-decoracao">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/decoracao.png" alt="Decoração"/>
+                </div>
+                <h4 class="categorias__list_item_titulo">Decoracao</h4>
+            </li>
+            <li class="categorias_list_item categorias__list_item-canecas">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/canecas.png" alt="Canecas"/>
+                </div>
+                <h4 class="categorias__list_item_titulo">Canecas</h4>
+            </li>
+            <li class="categorias_list_item categorias__list_item-acessorios">
+                <div class="categorias__list_item_container">
+                    <img src="./assets/acessorios.png" alt="Acessorios"/>
+                </div>
+                <h4 class="categorias__list_item_titulo">Acessorios</h4>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
