add seção produtos

--- a/index.html
+++ b/index.html
@@ -64,31 +64,94 @@
 
     <section class="categorias">
         <h3 class="categorias__titulo">Categorias</h3>
-        <p class="categorias__texto">De roupas a gadgets tecnologicos temos tudo para atender suas paixões e hobbies com estilo e autenticidade</p>
+        <p class="categorias__texto">De roupas a gadgets tecnologicos temos tudo para atender suas paixões e hobbies com
+            estilo e autenticidade</p>
         <ul class="categorias__list">
             <li class="categorias_list_item categorias__list_item-roupas">
                 <div class="categorias__list_item_container">
-                    <img src="./assets/roupas.png" alt="Roupas"/>
+                    <img src="./assets/roupas.png" alt="Roupas" />
                 </div>
                 <h4 class="categorias__list_item_titulo">Roupas</h4>
             </li>
             <li class="categorias_list_item categorias__list_item-decoracao">
                 <div class="categorias__list_item_container">
-                    <img src="./assets/decoracao.png" alt="Decoração"/>
+                    <img src="./assets/decoracao.png" alt="Decoração" />
                 </div>
                 <h4 class="categorias__list_item_titulo">Decoracao</h4>
             </li>
             <li class="categorias_list_item categorias__list_item-canecas">
                 <div class="categorias__list_item_container">
-                    <img src="./assets/canecas.png" alt="Canecas"/>
+                    <img src="./assets/canecas.png" alt="Canecas" />
                 </div>
                 <h4 class="categorias__list_item_titulo">Canecas</h4>
             </li>
             <li class="categorias_list_item categorias__list_item-acessorios">
                 <div class="categorias__list_item_container">
-                    <img src="./assets/acessorios.png" alt="Acessorios"/>
+                    <img src="./assets/acessorios.png" alt="Acessorios" />
                 </div>
                 <h4 class="categorias__list_item_titulo">Acessorios</h4>
+            </li>
+        </ul>
+    </section>
+
+    <section class="promocoes">
+        <h3 class="promocoes___titulo"> Promos especiais</h3>
+        <ul class="promocoes__list">
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/abridor.png" alt="abridor de garrafas">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Abridor</h4>
+                    <p>24,90</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/boné.png" alt="boné">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Boné</h4>
+                    <p>25,00</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/camisa.png" alt="camisa">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Camisa</h4>
+                    <p>29,00</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/camiseta.png" alt="camiseta">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Camiseta</h4>
+                    <p>29,00</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/caneca.png" alt="caneca">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Caneca</h4>
+                    <p>28,00</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/copo.png" alt="Copo">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Copo</h4>
+                    <p>28,00</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/mousepad.png" alt="mousepad">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Mousepad</h4>
+                    <p>18,00</p>
+                </div>
+            </li>
+            <li class="promocoes__list_item">
+                <img src="./assets/produtos/quadro.png" alt="quadro">
+                <div class="promocoes__list_item_descricao">
+                    <h4>Quadro</h4>
+                    <p>22,00</p>
+                </div>
             </li>
         </ul>
     </section>
