add colunas e linhas

--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@
                         <img src="./assets/icons/icon-pix.svg" alt="Pix">
                     </li>
                 </ul>
+            </div>
+            <div rodape__coluna>
                 <ul class="rodape__coluna_list-redes-sociais">
+                    <h5 class="rodape__coluna_titulo">Redes Sociais</h5>
                     <li class="rodape__coluna_list-item-redes-sociais">
                         <a href="#">
                             <img src="./assets/icons/whatsapp.svg" alt="Whatsapp">
@@ -254,7 +257,6 @@
                 </ul>
             </div>
         </div>
-
     </footer>
 </body>
 
