add Rodape para mobile

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </section>
     <footer class="rodape">
         <div class="rodape__linha">
-            <div class="rodape__coluna rodape__coluna_log">
+            <div class="rodape__coluna rodape__coluna_logo">
                 <img src="./assets/icons/logo-verde.svg" alt="usaDev logo">
                 <p class="rodape__coluna_logo_texto">Hora de abraçar o seu lado geek</p>
             </div>
@@ -237,8 +237,8 @@
                 </ul>
             </div>
             <div rodape__coluna>
+                <h5 class="rodape__coluna_titulo">Redes Sociais</h5>
                 <ul class="rodape__coluna_list-redes-sociais">
-                    <h5 class="rodape__coluna_titulo">Redes Sociais</h5>
                     <li class="rodape__coluna_list-item-redes-sociais">
                         <a href="#">
                             <img src="./assets/icons/whatsapp.svg" alt="Whatsapp">
