--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
             </li>
         </ul>
     </section>
+    <section class="newsletter">
+        <h3 class="newsletter__titulo">Inscreva-se para ganhar descontos!</h3>
+        <h4 class="newsletter__texto">Cadastre seu email, receba novidades e descontos imperdíveis antes de todo mundo!</h4>
+        <div class="newsletter__container">
+            <input type="email"
+             name="email" 
+             id="email" 
+             placeholder="Digite seu melhor endereço de email"
+             class="newsletter__container_input">
+            <button class="newsletter__container_botao">Inscrever</button>
+        </div>
+    </section>
+    
     <footer class="rodape">
         <div class="rodape__linha">
             <div class="rodape__coluna rodape__coluna_logo">
